fixed spacing for header and footer

--- a/index.css
+++ b/index.css
@@ -10,8 +10,11 @@ body{
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    height:10vh;
+    box-sizing: border-box;
     margin:0;
-    padding:0;
+    padding:20px;
 }
 
 main{
@@ -32,14 +35,16 @@ input[type=text]{
     margin: 25px 0;
     box-sizing: border-box;
 }
-
 .footer{
     list-style: none;
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    height:10vh;
+    box-sizing: border-box;
     margin:0;
-    padding:0;
+    padding:10px;
 }
 .nav-items-left{
     display: flex;
@@ -50,4 +55,12 @@ input[type=text]{
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+
+}
+.nav-item{
+    padding: 5px;
+}
+#body{
+    width: 100%;
+    height: 80vh;
 }
